:refactor: remove inconsistencias e codigos nao utilizados